Grace/tests/gibbs/errors/t048.grace
// ERROR = P1033
method [ {
    print "Hello"
}
